# godot_rust_hello_world

./: Cargo.toml
src/: adapter.rs  attrs.rs  effects.rs  lib.rs
src/adapter/: fixed_name_wrapper.rs
src/attrs/: adapter_effect.rs  dyn_attr.rs  dyn_attr_effect.rs  dyn_prop.rs  dyn_prop_dur_effect.rs  dyn_prop_inst_effect.rs  dyn_prop_period_effect.rs
src/effects/: instant_effect.rs
